# cm_adder

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Dir_Builder.cpp  Dir_Builder.hpp  main.cpp
templates/: folders.lst
tests/: CMakeLists.txt  test_folder.cpp
